# FakeWiFiPortalDetector

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.json
configs/: default.toml
scripts/: build.sh
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/config/: mod.rs
src-tauri/src/database/: mod.rs
src-tauri/src/logging/: mod.rs
src-tauri/src/login_analyzer/: mod.rs
src-tauri/src/network/: mod.rs
src-tauri/src/notifications/: mod.rs
src-tauri/src/probe/: mod.rs
src-tauri/src/redirect/: mod.rs
src-tauri/src/scoring/: mod.rs
src-tauri/src/tls/: mod.rs
src-tauri/tests/: scan_pipeline_test.rs
src/tray/: tray.ts
