[package]
name = "fakewifi-detector"
version = "0.1.0"
description = "Detect and warn users about fake captive portals on public WiFi"
edition = "2021"
license = "MIT"

[lib]
name = "fakewifi_detector_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "fakewifi-detector"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-notification = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
rustls = "0.23"
webpki-roots = "0.26"
rusqlite = { version = "0.31", features = ["bundled"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
url = "2"
trust-dns-resolver = "0.24"
uuid = { version = "1", features = ["v4"] }
x509-parser = "0.16"


[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
